Section 3 overflow issue

--- a/style/style.css
+++ b/style/style.css
@@ -179,15 +179,15 @@
 }
 
 #about-us .div-follow {
-    /* Frame 18 */
+     
     width: 884px;
     height: 65px;
-    /* Auto layout */
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 10;
+    gap: 10px;
     padding: 30px 10px 30px 10px;
 
     box-sizing: border-box;
